# Path-Tracking

./: README.md  joystick.html
NMPC/: bezier_path.py  nmpc_differential.py  nmpc_mecanum.py
NMPC/CGMRES/: bezier_path.py  nmpc_cgmres_diff_single.py  nmpc_mecanum_cgmres_single.py  nmpc_omni_cgmres_single.py
NMPC/CasAdi/: nmpc_omni.py
NMPC/coinhsl/: ChangeLog  CoinHslConfig.h  CoinHslConfig.h.in  LICENCE  Makefile  Makefile.am  Makefile.in  aclocal.m4  coinhsl.pc  compile  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.ac  depcomp  install-sh  libcoinhsl.la  libcoinhsl.sym  libtool  missing
NMPC/coinhsl/.libs/: libcoinhsl.ver
NMPC/coinhsl/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
NMPC/coinhsl/common/: deps.f  deps.lo
NMPC/coinhsl/loadmetis/: loadmetis.c  loadmetis.lo
NMPC/coinhsl/loadmetis/.deps/: loadmetis.Plo
NMPC/coinhsl/ma27/: ma27d.lo  ma27s.lo
NMPC/coinhsl/ma28/: ma28d.lo  ma28s.f  ma28s.lo
NMPC/coinhsl/mc19/: mc19d.lo  mc19s.lo
PID/: bezier_path.py  pid_track.py  pid_track_point.py  pid_track_trajectory.py
